@@ -5,6 +5,7 @@ import org.bukkit.command.Command;
 import org.bukkit.command.CommandSender;
 import org.bukkit.command.TabCompleter;
 import org.bukkit.entity.Player;
+import org.jetbrains.annotations.NotNull;
 
 import java.util.ArrayList;
 import java.util.Arrays;
@@ -15,14 +16,14 @@ public class TokenTabCompleter implements TabCompleter {
     private final List<String> adminSubcommands = Arrays.asList("give", "take", "set");
 
     @Override
-    public List<String> onTabComplete(CommandSender sender, Command command, String alias, String[] args) {
+    public List<String> onTabComplete(@NotNull CommandSender sender, @NotNull Command command, @NotNull String alias, String[] args) {
         List<String> completions = new ArrayList<>();
 
         if (args.length == 1) {
             // First argument - player name or admin command
             List<String> players = Bukkit.getOnlinePlayers().stream()
                     .map(Player::getName)
-                    .collect(Collectors.toList());
+                    .toList();
             
             if (sender.hasPermission("simplevote.admin")) {
                 completions.addAll(adminSubcommands);
@@ -34,7 +35,7 @@ public class TokenTabCompleter implements TabCompleter {
             if (sender.hasPermission("simplevote.admin") && adminSubcommands.contains(args[0].toLowerCase())) {
                 completions.addAll(Bukkit.getOnlinePlayers().stream()
                         .map(Player::getName)
-                        .collect(Collectors.toList()));
+                        .toList());
             }
         } else if (args.length == 3) {
             // Third argument - token amount for admin commands
